# ChangeLog for dev-util/monotone
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monotone/Attic/ChangeLog,v 1.1 2004/12/30 04:35:47 dragonheart Exp $

*monotone-0.15 (30 Dec 2004)

  30 Dec 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +monotone-0.15.ebuild:
  initial import as per bug #39383. Ebuild based of contributions from Peter
  Simons <simons@cryp.to> and Wojciech Milkowski <wmilkowski@gazeta.pl>.
